src/generate/snapshots/bevy_state_plugin_generator__generate__tests__snapshots@list_root_a_b_Full_no_rustfmt.snap
---
source: src/generate/tests.rs
expression: "generate_all_type_definitions(node, naming_scheme)"
---
[
    "Root -> Root",
    "A -> RootA",
    "B -> RootAB",
]
